--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link type="image/png" sizes="32x32" rel="icon" href="./sunflower.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Vite + React</title>
+    <title>Daiseyline</title>
   </head>
   <body>
     <div id="root"></div>
